; ModuleID = '/home/carl/AnghaBench/ccv/lib/extr_ccv_sift.c__ccv_precomputed_expn.c'
source_filename = "/home/carl/AnghaBench/ccv/lib/extr_ccv_sift.c__ccv_precomputed_expn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXPN_SZ = common dso_local global i32 0, align 4
@EXPN_MAX = common dso_local global i32 0, align 4
@_ccv_expn_tab = common dso_local global i32* null, align 8
@_ccv_expn_init = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @_ccv_precomputed_expn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_ccv_precomputed_expn() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %2

2:                                                ; preds = %21, %0
  %3 = load i32, i32* %1, align 4
  %4 = load i32, i32* @EXPN_SZ, align 4
  %5 = add nsw i32 %4, 1
  %6 = icmp slt i32 %3, %5
  br i1 %6, label %7, label %24

7:                                                ; preds = %2
  %8 = load i32, i32* %1, align 4
  %9 = sitofp i32 %8 to double
  %10 = fneg double %9
  %11 = load i32, i32* @EXPN_MAX, align 4
  %12 = load i32, i32* @EXPN_SZ, align 4
  %13 = sdiv i32 %11, %12
  %14 = sitofp i32 %13 to double
  %15 = fmul double %10, %14
  %16 = call i32 @exp(double %15)
  %17 = load i32*, i32** @_ccv_expn_tab, align 8
  %18 = load i32, i32* %1, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32, i32* %17, i64 %19
  store i32 %16, i32* %20, align 4
  br label %21

21:                                               ; preds = %7
  %22 = load i32, i32* %1, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %1, align 4
  br label %2

24:                                               ; preds = %2
  store i32 1, i32* @_ccv_expn_init, align 4
  ret void
}

declare dso_local i32 @exp(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
